# kalendar

./: .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.rst  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish_to_pypi.yaml  pypi_publish.yaml  run-python-tests.yaml
docs/: api.rst  conf.py  index.rst  kalendar.rst
docs/_autosummary/: kalendar.Dekad.rst  kalendar.rst
kalendar/: _version.py  dekad.py
requirements/: requirements-dev.txt
src/kalendar/: __init__.py  _version.py  dekad.py  pentad.py
tests/: test_dekad.py  test_pentad.py
