[metadata]
name = kalendar
version = attr: kalendar.__version__
url = https://github.com/OCHA-DAP/kalendar
project_urls =
    Documentation = https://kalendar.readthedocs.io/en/latest/
    Changes = https://github.com/OCHA-DAP/pa-aa-toolbox/blob/main/CHANGELOG.rst
    PyPI Releases = https://pypi.org/project/kalendar/
    Source Code = https://github.com/OCHA-DAP/kalendar/
    Issue Tracker = https://github.com/OCHA-DAP/kalendar/issues/
license = GPLv3
author = Seth Caldwell
author_email = caldwellst@gmail.com
description = Datetime extensions for dekadal data
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >= 3.7

[tox:tox]
env_list =
    py311
    py310
    py39
    py38

[testenv]
wheel = true
recreate = true
extras = test
commands =
    pytest \
    --cov=kalendar \
    --no-cov-on-fail \
    --junitxml=.tox/test-results.xml \
    --cov-report=xml \
    --cov-report=term-missing

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311

[build_sphinx]
builders = html
source-dir = docs
build-dir = docs/_build

[flake8]
docstring-convention = numpy
max-pos-args = 2
extend-ignore =
    # Ignore f-strings, we like them:
    SFS301,

[options.extras_require]
test =
    pytest
    pytest-cov
    tox

doc =
    extras_require
    sphinx
    sphinx-rtd-theme

dev =
    %(test)s
    %(doc)s
    pre-commit
